<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">KtMapSample</string>
    <string name="normal_map_activity_label">Normal Map</string>
    <string name="normal_map_activity_description">sample about normal map</string>
    <string name="satellite_map_activity_label">Satellite Map</string>
    <string name="satellite_map_activity_description">sample about satellite map</string>
    <string name="marker_activity_label">Marker</string>
    <string name="marker_activity_description">Marker on map</string>
    <string name="add_marker_activity_label">Add Marker</string>
    <string name="add_marker_activity_description">Add marker on map</string>
    <string name="add_infowindow_activity_label">Add InfoWindow</string>
    <string name="add_infowindow_activity_description">Add infowindow on map</string>
    <string name="polyline_activity_label">PolylineOverlay</string>
    <string name="polyline_activity_description">PolylineOverlay on map</string>
    <string name="polygon_activity_label">PolygonOverlay</string>
    <string name="polygon_activity_description">PolygonOverlay on map</string>
    <string name="infowindow_activity_label">InfoWindow</string>
    <string name="infowindow_activity_description">InfoWindow with marker</string>
    <string name="custom_infowindow_activity_label">Custom InfoWindow</string>
    <string name="custom_infowindow_activity_description">Custom InfoWindow</string>
    <string name="path_activity_label">PathOverlay</string>
    <string name="path_activity_description">PathOverlay on map</string>
    <string name="basic_camera__activity_label">Change map center, zoom</string>
    <string name="random_cameara_description">Change map center, zoom</string>
    <string name="animated_camera_activity_label">easeTo, flyTo Camera </string>
    <string name="animated_camera_activity_description">easeTo, flyTo Camera animation</string>
    <string name="camera_fitbounds_activity_label">Camera fitBounds</string>
    <string name="camera_fitbounds_activity_description">Camera LngLatBounds</string>
    <string name="gesture_camera_activity_label">Change map zoom, pitch, rotate</string>
    <string name="gesture_camera_description">Change map zoom, pitch, rotate</string>
    <string name="map_click_event_activity_label">Map Click Event</string>
    <string name="map_click_event_activity_description">click and long click events on map activity</string>
    <string name="map_extent_label">Map Extent</string>
    <string name="map_extent_description">Map Extent</string>
    <string name="min_max_zoom_activity_label">Min/Max Zoom</string>
    <string name="min_max_zoom_activity_description">Min/Max Zoom</string>
    <string name="max_pitch_activity_label">Max Pitch</string>
    <string name="max_pitch_activity_description">Max Pitch</string>
    <string name="zoom_gesture_event_activity_label">Map Zoom Event</string>
    <string name="zoom_gesture_event_activity_description">Handling zoom gesture using double tap, two finger tap and
        drag
    </string>
    <string name="all_gesture_event_activity_label">Move,Rotate,Pitch,Scale Gesture Events</string>
    <string name="all_gesture_event_activity_description">Handling move,rotate,pitch and scale gesture events on map
    </string>
    <string name="overlay_event_activity_label">Overlay Events</string>
    <string name="overlay_event_activity_description">Handling overlay events on map</string>
    <string name="toggle_gesture_settings_activity_label">Toggle Gesture Settings</string>
    <string name="toggle_gesture_settings_activity_description">Handling gesture settings on map using toggle button
    </string>
    <string name="double_click_zoom_handler_label">Double Click Zoom Handler</string>
    <string name="double_click_zoom_handler_description">Handling double click zoom using toggle button</string>
    <string name="gesture_interactive_label">Gesture Interactive</string>
    <string name="gesture_interactive_description">Change gesture interactive</string>
    <string name="background_layer_activity_label">BackgroundLayer</string>
    <string name="background_layer_activity_description">BackgroundLayer</string>
    <string name="polygon_layer_activity_label">PolygonLayer</string>
    <string name="polygon_layer_activity_description">PolygonLayer</string>
    <string name="polygon_layer_remote_activity_label">PolygonLayer and Remote GeoJSONSource</string>
    <string name="polygon_layer_remote_activity_description">PolygonLayer and Remote GeoJSONSource</string>
    <string name="line_layer_remote_activity_label">LineLayer and VectorSource</string>
    <string name="line_layer_remote_activity_description">LineLayer and VectorSource</string>
    <string name="raster_layer_activity_label">RasterLayer</string>
    <string name="raster_layer_activity_description">RasterLayer</string>
    <string name="symbol_layer_activity_label">SymbolLayer</string>
    <string name="symbol_layer_activity_description">SymbolLayer</string>
    <string name="compass_activity_label">Compass</string>
    <string name="compass_activity_description">Change Compass Position and Image</string>
    <string name="pan_controls_activity_label">PanControls</string>
    <string name="pan_controls_activity_description">Move Map with Pan touch</string>
    <string name="zoom_controls_activity_label">ZoomControls</string>
    <string name="zoom_controls_activity_description">Zoom In/Out With Button</string>
    <string name="logo_activity_label">Logo</string>
    <string name="logo_activity_description">Move KT Logo and Click Event</string>
    <string name="scale_bar_activity_label">ScaleBar</string>
    <string name="scale_bar_activity_description">Scale Change with Zoom Ratio</string>
    <string name="current_location_activity_label">CurrentLocation</string>
    <string name="current_location_description">User Location Icon And Move Camera</string>
    <string name="zoom_text">Zoom</string>
    <string name="double_click_text">Double Click</string>
    <string name="rotate_text">Rotate</string>
    <string name="scroll_text">Scroll</string>
    <string name="horizontal_scroll_text">Horizontal Scroll</string>
    <string name="pitch_text">Pitch</string>
    <string name="fling_text">Fling</string>
    <string name="move_text">Move</string>
    <string name="interactive_text">interactive</string>
    <string name="zoom_min_text">min/max zoom</string>
    <string name="zoom_min_value">6</string>
    <string name="zoom_max_value">21</string>
    <string name="bearing_min_text">min/max bearing</string>
    <string name="bearing_min_value">0</string>
    <string name="bearing_max_value">360</string>
    <string name="pitch_min_text">min/max pitch</string>
    <string name="pitch_min_value">0</string>
    <string name="pitch_max_value">63</string>
    <string name="format_map_click">지도 클릭\n(%1$.5f, %2$.5f)</string>
    <string name="format_map_long_click">지도 롱 클릭\n(%1$.5f, %2$.5f)</string>
    <string name="format_map_long_double_tap">지도 더블 탭\n(%1$.5f, %2$.5f)</string>
    <string name="format_double">%.2f</string>
    <string name="format_map_marker_click">마커 클릭\n(%1$.5f, %2$.5f)</string>
    <string name="test_camera_start">카메라 시작</string>
    <string name="test_camera_move">카메라 움직임</string>
    <string name="test_camera_end">카메라 종료</string>
    <string name="changed_camera_zoom">변경된 줌 레벨\n(%1$.5f)</string>
    <string name="changed_camera_center">변경된 중심좌표\n(%1$.5f, %2$.5f)</string>
    <string name="change_camera_zoom">줌 변경</string>
    <string name="change_camera_center">중심점 변경</string>
    <string name="camera_easeTo">easeTo</string>
    <string name="camera_flyTo">flyTo</string>
    <string name="fit_bounds_camera_busan">부산 영역</string>
    <string-array name="interpolate_array">
        <item>AccelerateDecelerate</item>
        <item>Bounce</item>
        <item>Anticipate</item>
    </string-array>
    <string-array name="movetype_array">
        <item>MoveTo</item>
        <item>ZoomTo</item>
        <item>PitchTo</item>
        <item>BearingTo</item>
    </string-array>
    <string name="compass_enable">Enabled</string>
    <string name="compass_center">Center</string>
    <string name="compass_margin">More margins</string>
    <string name="compass_image">Green image</string>
    <string name="compass_alpha">Alpha 50%</string>
    <string name="compass_click_toast">Toast onClick</string>
    <string name="zoom_controls_enable">Enabled</string>
    <string name="zoom_controls_bottom">Bottom</string>
    <string name="zoom_controls_margin">More margins</string>
    <string name="zoom_controls_alpha">Alpha 50%</string>
    <string name="zoom_controls_background">Background black</string>
    <string name="zoom_controls_linecolor">Line white</string>
    <string name="zoom_controls_image">Green image</string>
    <string name="zoom_controls_change">More zoom change</string>
    <string name="logo_top">Top</string>
    <string name="logo_margin">More margins</string>
    <string name="logo_click_toast">Toast onClick</string>
    <string name="scale_bar_enable">Enabled</string>
    <string name="scale_bar_top">Top</string>
    <string name="scale_bar_margin">More margins</string>
    <string name="scale_bar_text_color">Text color white</string>
    <string name="scale_bar_text_size">Text size bigger</string>
    <string name="scale_bar_line_color">Line color white</string>
    <string name="scale_bar_margin_between_text_and_bar">Text between bar margin</string>
    <string name="current_location_enabled">Enabled</string>
    <string name="current_location_puck_enabled">Location Puck Enabled</string>
    <string name="current_location_heading_enabled">Location Heading Enabled</string>
    <string name="current_location_right">Right</string>
    <string name="current_location_margin">More margins</string>
    <string name="current_location_image">Green image</string>
    <string name="current_location_alpha">Alpha 50%</string>
    <string name="path">path</string>
    <string name="path_next">next</string>
    <string name="path_prev">prev</string>
    <string name="path_color">change color</string>
    <string name="camera_animator_activity_label">Camera Animation</string>
    <string name="camera_animator_activity_description">Camera with Android Animator</string>
    <string name="marker_animate_activity_label">Animate a marker</string>
    <string name="marker_animate_activity_description">Animate a marker</string>
    <string name="symbol_animate_activity_label">Animate a map camera around a point</string>
    <string name="symbol_animate_activity_description">Animate map camera around a point</string>
    <string name="line_animate_activity_label">Animate a line</string>
    <string name="line_animate_activity_description">Animate a line</string>
    <string name="query_features_activity_label">Get features</string>
    <string name="query_features_activity_description">longpress and get features</string>
    <string name="building_activity_label">BuildingLayerGroup</string>
    <string name="building_activity_description">Building enabled,heightRatio,opacity,color</string>
    <string name="building_enable">Enabled</string>
    <string name="height_text">min/max height</string>
    <string name="height_min_value">0</string>
    <string name="height_max_value">1.0</string>
    <string name="opacity_text">min/max opacity</string>
    <string name="opacity_min_value">0</string>
    <string name="opacity_max_value">1.0</string>
    <string name="color_text">RGB</string>
    <string name="color_r_min_value">0</string>
    <string name="color_r_max_value">255</string>
    <string name="color_g_min_value">0</string>
    <string name="color_g_max_value">255</string>
    <string name="color_b_min_value">0</string>
    <string name="color_b_max_value">255</string>
    <string name="activity_need_permission">ACTIVITY_NEED_PERMISSION</string>
</resources>