<?xml version="1.0" encoding="utf-8"?>

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".example.control.ZoomControlsActivity">

        <com.kt.maps.sdk.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="13dp"
            android:padding="15dp"
            android:background="@drawable/basic_button_shape">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/zoom_controls_enable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zoom_controls_enable"
                android:checked="true"
                app:switchPadding="10dp"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/zoom_controls_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/zoom_controls_bottom"
                app:switchPadding="10dp"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/zoom_controls_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/zoom_controls_margin"
                app:switchPadding="10dp"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/zoom_controls_alpha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zoom_controls_alpha"
                android:checked="false"
                app:switchPadding="10dp"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/zoom_controls_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/zoom_controls_background"
                app:switchPadding="10dp"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/zoom_controls_linecolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/zoom_controls_linecolor"
                app:switchPadding="10dp"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/zoom_controls_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/zoom_controls_image"
                app:switchPadding="10dp"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/zoom_controls_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/zoom_controls_change"
                app:switchPadding="10dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
