<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:ignore="MissingDefaultResource">
    <data>
        <variable name="activity"
                  type="com.kt.maps.sample.example.interaction.ToggleGestureSettingsActivity"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_double_click_zoom"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.kt.maps.sdk.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:orientation="vertical"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      android:layout_marginStart="20dp"
                      android:layout_marginTop="13dp"
                      android:padding="15dp"
                      android:background="@drawable/basic_button_shape">

            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/zoom_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zoom_text"
                    android:checked="true"
                    app:switchPadding="10dp"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/rotate_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rotate_text"
                    app:switchPadding="10dp"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/scroll_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/scroll_text"
                    app:switchPadding="10dp"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/horizontal_scroll_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/horizontal_scroll_text"
                    android:checked="true"
                    app:switchPadding="10dp"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/pitch_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/pitch_text"
                    app:switchPadding="10dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

