<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".example.control.LogoActivity">

        <com.kt.maps.sdk.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        <LinearLayout android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:orientation="vertical"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      android:layout_marginStart="20dp"
                      android:layout_marginTop="13dp"
                      android:padding="15dp"
                      android:background="@drawable/basic_button_shape">

            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/logo_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logo_top"
                    android:checked="false"
                    app:switchPadding="10dp"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/logo_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/logo_margin"
                    app:switchPadding="10dp"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/logo_click_toast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/logo_click_toast"
                    app:switchPadding="10dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
